fixed the alignment of the section icons

--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -12,7 +12,7 @@ input {
     @include bRadius();
     border:none;
     width:100%;
-    margin: 5px;
+    margin: 5px 0;
     padding: 3px 10px;
 
     &#name{
