--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -31,3 +31,10 @@ a {
     }
 }
 
+section .outside {
+    align-self: flex-start;
+    position: relative;
+    top:42px;
+    left:-20px;
+}
+
