--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -1,6 +1,8 @@
 // Skills styles
 
 #skills {
+    background-color: $accentColour2;
+
     img {
         width: 1.6rem;
     }
